Kanban dark mode fix

--- a/main.scss
+++ b/main.scss
@@ -11,6 +11,7 @@
   --search-border-color: rgba(0, 0, 0, 0.07);
   --page-background-color: hsl(210, 9%, 98%);
   --main-area-background-color: #ffffff;
+  --cards-background-color: #ffffff;
   --secondary-background-color: hsl(210, 9%, 95%);
   --popup-background-color: #ffffff;
   --reference-item-background: hsl(0, 0%, 99%);
@@ -305,7 +306,7 @@ span.checkmark {
       text-overflow: ellipsis;
     }
     .kanban-card {
-      background: var(--main-area-background-color) !important;
+      background: var(--cards-background-color) !important;
       box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.7), 0px 4px 7px -1px rgba(0, 0, 0, 0.07) !important;
       border-radius: 4px !important;
       padding: 6px 10px !important;
@@ -482,6 +483,7 @@ span.checkmark {
     --search-border-color: rgba(255, 255, 255, 0.06);
     --page-background-color: hsl(0, 0%, 8%);
     --main-area-background-color: hsl(0, 0%, 12%);
+    --cards-background-color: hsl(0, 0%, 20%);
     --secondary-background-color: hsl(0, 0%, 18%);
     --popup-background-color: hsl(0, 0%, 4%);
     --brackets-color: rgba(255, 255, 255, 0.3);
